--- a/index.htm
+++ b/index.htm
@@ -19,8 +19,8 @@
 	<div id="logo"><a href="#"><img src="images/logo.png"></a></div>
 	<ul id="main-menu">
     	<li><a href="#about">About</a></li>
-        <li><a href="#experience">Experience</a></li>
-        <li><a href="#work">Work</a></li>
+        <li><a href="#experience">Class planning</a></li>
+        <li><a href="#work">Required courses</a></li>
         <li><a href="#connect">Connect</a></li>
     </ul>
 </div>
@@ -38,8 +38,9 @@
         <div class="top-divider"></div>
         <div class="content">
         	<img src="images/designer-photo.jpg" />
-            <h2>My Name is John Doe, and I am a Designer</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras diam risus, dignissim pharetra sagittis sed, adipiscing nec felis. Maecenas non nulla eget ligula semper aliquet. Pellentesque adipiscing pulvinar tortor, a adipiscing felis commodo in. Vestibulum dui magna, mattis in bibendum a, congue vitae lectus. In eu odio tortor, vel congue lacus. Donec viverra viverra eros, in egestas ligula adipiscing non. Morbi et ultricies sapien. Duis metus odio, commodo in tempor quis, euismod et ligula. Vivamus tristique condimentum ipsum sit amet posuere.</p> 
+            <h2>My Name is Yu-Fang Chen, a student :</h2>
+            <p>一九九九年三月 , 出生在台南的安平女孩 , 一個古色古香的小鎮 , 從小就騎著一台腳踏車和其他的安平孩子們在小巷中穿梭 、 一起大笑大叫 , 在一望無際的海港邊和湛藍的天空下不受拘束。</p> 
+			<p>未來規劃:成為一名專業投資理人員或銀行專員，對金融市場走向有一定了解</p>
             <ul id="service-icons">
             	<li class="services-design">Design</li>
                 <li class="services-mobile">Mobile</li>
@@ -53,22 +54,33 @@
 
 <!--Begin Experience Section-->   
     <div id="experience">
-    	<h1>Experience</h1>
+    	<h1>Class planning</h1>
         <div class="top-divider"></div>
         <div class="content">
             <div class="col">
-            <h2>Description of Work</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras diam risus, dignissim pharetra sagittis sed, adipiscing nec felis. Maecenas non nulla eget ligula semper aliquet. Pellentesque adipiscing pulvinar tortor, a adipiscing felis commodo in. Vestibulum dui magna, mattis in bibendum a, congue vitae lectus. In eu odio tortor, vel congue lacus. Donec viverra viverra eros, in egestas ligula adipiscing non. Morbi et ultricies sapien. Duis metus odio, commodo in tempor quis, euismod et ligula. Vivamus tristique condimentum </p>
+            <h2>    大一 - 大二</h2>
+            <p>認識投資理財所需證照及技能,考取相關證照,例如:信託業務人員、理財規劃人員</p>
+			<p>對應選擇課程:</p>
+			<p>民法概論、金融市場、投資學、貨幣銀行學、金融機構經營與管理、國際金融、證券投資分析</p>
+			<P>外語方面:大一修畢初階英語簡報及科技英文，從大二開始選修第二外語，上下學期分別為日語1及日語2</p>
+			<p>通識課程除校規定的校/院通識以外另依興趣選修:應用心理學、邏輯思維、就業與職場權益、商業倫理</p>
             </div>
             
             <div class="col col-mid">
-            <h2>Description of Work</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras diam risus, dignissim pharetra sagittis sed, adipiscing nec felis. Maecenas non nulla eget ligula semper aliquet. Pellentesque adipiscing pulvinar tortor, a adipiscing felis commodo in. Vestibulum dui magna, mattis in bibendum a, congue vitae lectus. In eu odio tortor, vel congue lacus. Donec viverra viverra eros, in egestas ligula adipiscing non. Morbi et ultricies sapien. Duis metus odio, commodo in tempor quis, euismod et ligula. Vivamus tristique condimentum </p>
+            <h2>    大三 -</h2>
+            <p>經過大一大二的自我認識，大三對未來應有更明確的規劃</p>
+            <p>專業方面選修:財金計量、投資銀行、財務風險管理、行為財務學</p>
+			<p>外語方面:延續大二修畢的日語課程，選擇日語3及日語4</p>
+			<p>因應專題、實習規劃課程:財務管理專題實習(一)、財務管理專題實習(二)</p>
+			<p>通識課程:資訊法律、國際組織與國際關係、情緒管理與壓力調適、企業營運與法律、生死教育</p>
             </div>
             
             <div class="col">
-            <h2>Description of Work</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras diam risus, dignissim pharetra sagittis sed, adipiscing nec felis. Maecenas non nulla eget ligula semper aliquet. Pellentesque adipiscing pulvinar tortor, a adipiscing felis commodo in. Vestibulum dui magna, mattis in bibendum a, congue vitae lectus. In eu odio tortor, vel congue lacus. Donec viverra viverra eros, in egestas ligula adipiscing non. Morbi et ultricies sapien. Duis metus odio, commodo in tempor quis, euismod et ligula. Vivamus tristique condimentum </p>
+            <h2>大四</h2>
+			<p>大即將畢業與社會接軌，應檢視過去三年所學，將學習的知識融會貫通，在專業方面選擇更能幫助就業的相關課程</p>
+			<p>專業方面選修:財務管理專題(三)、理財規劃人員認證輔導、初階外匯人員認證輔導、企業內部控制人員認證輔導</p>
+		    <p>外語方面:進修日語5及日語6</p>
+            <p>通識課程:日本文化與社會、永續發展導論、智慧慧產權概論、民主政治與兩岸關係</p>
             </div>
         </div>    
         <div class="bottom-divider"></div>
@@ -77,7 +89,7 @@
 
 <!--Begin Work Section-->  
     <div id="work">
-    	<h1>Work</h1>
+    	<h1>Required courses</h1>
         <div class="top-divider"></div>
         	<div class="content">
             	<ul id="work-thumbs">
