--- a/index.htm
+++ b/index.htm
@@ -58,8 +58,8 @@
         <div class="top-divider"></div>
         <div class="content">
             <div class="col">
-            <h2>    大一 - 大二</h2>
-            <p>認識投資理財所需證照及技能,考取相關證照,例如:信託業務人員、理財規劃人員</p>
+            <h2><font size="6">大一 - 大二</font></h2>
+            <p><font face="標楷體">認識投資理財所需證照及技能,考取相關證照,例如:信託業務人員、理財規劃人員</font></p>
 			<p>對應選擇課程:</p>
 			<p>民法概論、金融市場、投資學、貨幣銀行學、金融機構經營與管理、國際金融、證券投資分析</p>
 			<P>外語方面:大一修畢初階英語簡報及科技英文，從大二開始選修第二外語，上下學期分別為日語1及日語2</p>
