--- a/index.htm
+++ b/index.htm
@@ -59,28 +59,28 @@
         <div class="content">
             <div class="col">
             <h2><font size="6">大一 - 大二</font></h2>
-            <p><font face="標楷體">認識投資理財所需證照及技能,考取相關證照,例如:信託業務人員、理財規劃人員</font></p>
-			<p>對應選擇課程:</p>
-			<p>民法概論、金融市場、投資學、貨幣銀行學、金融機構經營與管理、國際金融、證券投資分析</p>
-			<P>外語方面:大一修畢初階英語簡報及科技英文，從大二開始選修第二外語，上下學期分別為日語1及日語2</p>
-			<p>通識課程除校規定的校/院通識以外另依興趣選修:應用心理學、邏輯思維、就業與職場權益、商業倫理</p>
+            <p><font face="DFKai-sb">認識投資理財所需證照及技能,考取相關證照,例如:信託業務人員、理財規劃人員</font></p>
+			<p><font face="DFKai-sb">對應選擇課程:</font></p>
+			<p><font face="DFKai-sb">民法概論、金融市場、投資學、貨幣銀行學、金融機構經營與管理、國際金融、證券投資分析</font></p>
+			<P><font face="DFKai-sb">外語方面:大一修畢初階英語簡報及科技英文，從大二開始選修第二外語，上下學期分別為日語1及日語2</font></p>
+			<p><font face="DFKai-sb">通識課程除校規定的校/院通識以外另依興趣選修:應用心理學、邏輯思維、就業與職場權益、商業倫理</font></p>
             </div>
             
             <div class="col col-mid">
             <h2>    大三 -</h2>
-            <p>經過大一大二的自我認識，大三對未來應有更明確的規劃</p>
-            <p>專業方面選修:財金計量、投資銀行、財務風險管理、行為財務學</p>
-			<p>外語方面:延續大二修畢的日語課程，選擇日語3及日語4</p>
-			<p>因應專題、實習規劃課程:財務管理專題實習(一)、財務管理專題實習(二)</p>
-			<p>通識課程:資訊法律、國際組織與國際關係、情緒管理與壓力調適、企業營運與法律、生死教育</p>
+            <p><font face="DFKai-sb">經過大一大二的自我認識，大三對未來應有更明確的規劃</font></p>
+            <p><font face="DFKai-sb">專業方面選修:財金計量、投資銀行、財務風險管理、行為財務學</font></p>
+			<p><font face="DFKai-sb">外語方面:延續大二修畢的日語課程，選擇日語3及日語4</font></p>
+			<p><font face="DFKai-sb">因應專題、實習規劃課程:財務管理專題實習(一)、財務管理專題實習(二)</font></p>
+			<p><font face="DFKai-sb">通識課程:資訊法律、國際組織與國際關係、情緒管理與壓力調適、企業營運與法律、生死教育</font></p>
             </div>
             
             <div class="col">
             <h2>大四</h2>
-			<p>大即將畢業與社會接軌，應檢視過去三年所學，將學習的知識融會貫通，在專業方面選擇更能幫助就業的相關課程</p>
-			<p>專業方面選修:財務管理專題(三)、理財規劃人員認證輔導、初階外匯人員認證輔導、企業內部控制人員認證輔導</p>
-		    <p>外語方面:進修日語5及日語6</p>
-            <p>通識課程:日本文化與社會、永續發展導論、智慧慧產權概論、民主政治與兩岸關係</p>
+			<p><font face="DFKai-sb">大即將畢業與社會接軌，應檢視過去三年所學，將學習的知識融會貫通，在專業方面選擇更能幫助就業的相關課程</font></p>
+			<p><font face="DFKai-sb">專業方面選修:財務管理專題(三)、理財規劃人員認證輔導、初階外匯人員認證輔導、企業內部控制人員認證輔導</font></p>
+		    <p><font face="DFKai-sb">外語方面:進修日語5及日語6</font></p>
+            <p><font face="DFKai-sb">通識課程:日本文化與社會、永續發展導論、智慧慧產權概論、民主政治與兩岸關係</font></p>
             </div>
         </div>    
         <div class="bottom-divider"></div>
