--- a/index.htm
+++ b/index.htm
@@ -58,7 +58,7 @@
         <div class="top-divider"></div>
         <div class="content">
             <div class="col">
-            <h2><font size="6"><font face="DFKai-sb">大一 - 大二</font></h2>
+            <h2><font size="6"><font face="DFKai-sb">大一 - 大二</font></font></h2>
             <p><font face="DFKai-sb">認識投資理財所需證照及技能,考取相關證照,例如:信託業務人員、理財規劃人員</font></p>
 			<p><font face="DFKai-sb">對應選擇課程:</font></p>
 			<p><font face="DFKai-sb">民法概論、金融市場、投資學、貨幣銀行學、金融機構經營與管理、國際金融、證券投資分析</font></p>
@@ -67,7 +67,7 @@
             </div>
             
             <div class="col col-mid">
-            <h2><font size="6"><font face="DFKai-sb">大三 -</font></</h2>
+            <h2><font size="6"><font face="DFKai-sb">大三 -</font></font></h2>
             <p><font face="DFKai-sb">經過大一大二的自我認識，大三對未來應有更明確的規劃</font></p>
             <p><font face="DFKai-sb">專業方面選修:財金計量、投資銀行、財務風險管理、行為財務學</font></p>
 			<p><font face="DFKai-sb">外語方面:延續大二修畢的日語課程，選擇日語3及日語4</font></p>
@@ -76,7 +76,7 @@
             </div>
             
             <div class="col">
-            <h2><font size="6"><font face="DFKai-sb">大四</font></h2>
+            <h2><font size="6"><font face="DFKai-sb">大四</font></font></h2>
 			<p><font face="DFKai-sb">大即將畢業與社會接軌，應檢視過去三年所學，將學習的知識融會貫通，在專業方面選擇更能幫助就業的相關課程</font></p>
 			<p><font face="DFKai-sb">專業方面選修:財務管理專題(三)、理財規劃人員認證輔導、初階外匯人員認證輔導、企業內部控制人員認證輔導</font></p>
 		    <p><font face="DFKai-sb">外語方面:進修日語5及日語6</font></p>
