--- a/index.htm
+++ b/index.htm
@@ -58,7 +58,7 @@
         <div class="top-divider"></div>
         <div class="content">
             <div class="col">
-            <h2><font size="6"><font face="DFKai-sb">大一-大二</font></h2>
+            <h2><font face="DFKai-sb">大一-大二</font></h2>
             <p><font face="DFKai-sb">認識投資理財所需證照及技能,考取相關證照,例如:信託業務人員、理財規劃人員</font></p>
 			<p><font face="DFKai-sb">對應選擇課程:</font></p>
 			<p><font face="DFKai-sb">民法概論、金融市場、投資學、貨幣銀行學、金融機構經營與管理、國際金融、證券投資分析</font></p>
