--- a/index.htm
+++ b/index.htm
@@ -39,7 +39,7 @@
         <div class="content">
         	<img src="images/designer-photo.jpg" />
             <h2>My Name is Yu-Fang Chen, a student :</h2>
-            <p><font face="DFKai-sb">一九九九年三月 , 出生在台南的安平女孩 , 一個古色古香的小鎮 , 從小就騎著一台腳踏車和其他的安平孩子們在小巷中穿梭 、 一起大笑大叫 , 在一望無際的海港邊和湛藍的天空下不受拘束。</font></p> 
+            <p><font face="DFKai-sb">一九九九年三月 , 出生在台南的安平女孩 , 一個古色古香的小鎮 , 從小就騎著一台腳踏車和其他的安平孩子們在小巷中穿梭 、 一起大笑大叫 , 在一望無際的海港邊和湛藍的天空下不受拘束。<></p> 
 			<p><font face="DFKai-sb">未來規劃:成為一名專業投資理人員或銀行專員，對金融市場走向有一定了解</font></p>
             <ul id="service-icons">
             	<li class="services-design">Design</li>
