--- a/index.htm
+++ b/index.htm
@@ -67,7 +67,7 @@
             </div>
             
             <div class="col col-mid">
-            <h2><font face="DFKai-sb">大三-</font></</h2>
+            <h2><font face="DFKai-sb">大三-</font></h2>
             <p><font face="DFKai-sb">經過大一大二的自我認識，大三對未來應有更明確的規劃</font></p>
             <p><font face="DFKai-sb">專業方面選修:財金計量、投資銀行、財務風險管理、行為財務學</font></p>
 			<p><font face="DFKai-sb">外語方面:延續大二修畢的日語課程，選擇日語3及日語4</font></p>
