--- a/index.htm
+++ b/index.htm
@@ -59,7 +59,7 @@
         <div class="content">
             <div class="col">
             <h2><font face="DFKai-sb">大一-大二</font></h2>
-            <p><font face="DFKai-sb">認識投資理財所需證照及技能,考取相關證照,例如:信託業務人員、理財規劃人員</font></p>
+            <p><font face="DFKai-sb"><font size="4">認識投資理財所需證照及技能,考取相關證照,例如:信託業務人員、理財規劃人員</font></font></p>
 			<p><font face="DFKai-sb">對應選擇課程:</font></p>
 			<p><font face="DFKai-sb">民法概論、金融市場、投資學、貨幣銀行學、金融機構經營與管理、國際金融、證券投資分析</font></p>
 			<P><font face="DFKai-sb">外語方面:大一修畢初階英語簡報及科技英文，從大二開始選修第二外語，上下學期分別為日語1及日語2</font></p>
@@ -77,7 +77,7 @@
             
             <div class="col">
             <h2><font face="DFKai-sb">大四</font></h2>
-			<p><font face="DFKai-sb">大即將畢業與社會接軌，應檢視過去三年所學，將學習的知識融會貫通，在專業方面選擇更能幫助就業的相關課程</font></p>
+			<p><font face="DFKai-sb"><font size="4">大四即將畢業與社會接軌，應檢視過去三年所學，將學習的知識融會貫通，在專業方面選擇更能幫助就業的相關課程</font></font></p>
 			<p><font face="DFKai-sb">專業方面選修:財務管理專題(三)、理財規劃人員認證輔導、初階外匯人員認證輔導、企業內部控制人員認證輔導</font></p>
 		    <p><font face="DFKai-sb">外語方面:進修日語5及日語6</font></p>
             <p><font face="DFKai-sb">通識課程:日本文化與社會、永續發展導論、智慧慧產權概論、民主政治與兩岸關係</font></p>
