--- a/index.htm
+++ b/index.htm
@@ -60,8 +60,8 @@
             <div class="col">
             <h2><font face="DFKai-sb">大一-大二</font></h2>
             <p><font face="DFKai-sb"><font size="4">認識投資理財所需證照及技能,考取相關證照,例如:信託業務人員、理財規劃人員</font></font></p>
-			<p><font face="DFKai-sb">對應選擇課程:</font></p>
-			<p><font face="DFKai-sb">民法概論、金融市場、投資學、貨幣銀行學、金融機構經營與管理、國際金融、證券投資分析</font></p>
+			<p><font face="DFKai-sb"></font></p>
+			<p><font face="DFKai-sb">對應選擇課程:民法概論、金融市場、投資學、貨幣銀行學、金融機構經營與管理、國際金融、證券投資分析</font></p>
 			<P><font face="DFKai-sb">外語方面:大一修畢初階英語簡報及科技英文，從大二開始選修第二外語，上下學期分別為日語1及日語2</font></p>
 			<p><font face="DFKai-sb">通識課程除校規定的校/院通識以外另依興趣選修:應用心理學、邏輯思維、就業與職場權益、商業倫理</font></p>
             </div>
